ui works properly lmao with a metric ton of excessive logging